there's no rain... wait there is?

--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -3202,47 +3202,47 @@ function updatePressing(){
         } else if (antipresses>=0 && antipresses<1000) {
             document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1)))%1000).toFixed(2))+" anti-presses";
         } else if (antipresses>=1000 && antipresses<1000000) {
-            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1)))/1000).toFixed(0))+","+(((Math.round(Math.trunc(antipresses/100)))%10).toFixed(0))+""+(((Math.round(Math.trunc(antipresses/10)))%10).toFixed(0))+""+(((Math.round(Math.trunc(antipresses/1)))%10).toFixed(0))+" anti-presses";
+            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000)))%1000).toFixed(0))+","+(((Math.round(Math.trunc(antipresses/100)))%10).toFixed(0))+""+(((Math.round(Math.trunc(antipresses/10)))%10).toFixed(0))+""+(((Math.round(Math.trunc(antipresses/1)))%10).toFixed(0))+" anti-presses";
         } else if (antipresses>=1000000 && antipresses<1000000000) {
-            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000)))/1000).toFixed(0))+","+(((Math.round(Math.trunc(antipresses/100000)))%10).toFixed(0))+""+(((Math.round(Math.trunc(antipresses/10000)))%10).toFixed(0))+""+(((Math.round(Math.trunc(antipresses/1000)))%10).toFixed(0))+","+(((Math.round(Math.trunc(antipresses/100)))%10).toFixed(0))+""+(((Math.round(Math.trunc(antipresses/10)))%10).toFixed(0))+""+(((Math.round(Math.trunc(antipresses/1)))%10).toFixed(0))+" anti-presses";
+            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000)))%1000).toFixed(0))+","+(((Math.round(Math.trunc(antipresses/100000)))%10).toFixed(0))+""+(((Math.round(Math.trunc(antipresses/10000)))%10).toFixed(0))+""+(((Math.round(Math.trunc(antipresses/1000)))%10).toFixed(0))+","+(((Math.round(Math.trunc(antipresses/100)))%10).toFixed(0))+""+(((Math.round(Math.trunc(antipresses/10)))%10).toFixed(0))+""+(((Math.round(Math.trunc(antipresses/1)))%10).toFixed(0))+" anti-presses";
         } else if (antipresses>=1000000000 && antipresses<1000000000000) {
-            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000)))/1000).toFixed(3))+"B anti-presses";
+            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000)))%1000).toFixed(3))+"B anti-presses";
         } else if (antipresses>=1000000000000 && antipresses<1000000000000000) {
-            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000)))/1000).toFixed(3))+"T anti-presses";
+            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000)))%1000).toFixed(3))+"T anti-presses";
         } else if (antipresses>=1000000000000000 && antipresses<1000000000000000000) {
-            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000)))/1000).toFixed(3))+"Qa anti-presses";
+            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000)))%1000).toFixed(3))+"Qa anti-presses";
         } else if (antipresses>=1000000000000000000 && antipresses<1000000000000000000000) {
-            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000)))/1000).toFixed(3))+"Qi anti-presses";
+            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000)))%1000).toFixed(3))+"Qi anti-presses";
         } else if (antipresses>=1000000000000000000000 && antipresses<1000000000000000000000000) {
-            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000)))/1000).toFixed(3))+"Sx anti-presses";
+            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000)))%1000).toFixed(3))+"Sx anti-presses";
         } else if (antipresses>=1000000000000000000000000 && antipresses<1000000000000000000000000000) {
-            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000)))/1000).toFixed(3))+"Sp anti-presses";
+            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000)))%1000).toFixed(3))+"Sp anti-presses";
         } else if (antipresses>=1000000000000000000000000000 && antipresses<1000000000000000000000000000000) {
-            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000)))/1000).toFixed(3))+"Oc anti-presses";
+            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000000)))%1000).toFixed(3))+"Oc anti-presses";
         } else if (antipresses>=1000000000000000000000000000000 && antipresses<1000000000000000000000000000000000) {
-            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000000)))/1000).toFixed(3))+"No anti-presses";
+            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000000000)))%1000).toFixed(3))+"No anti-presses";
         } else if (antipresses>=1000000000000000000000000000000000 && antipresses<1000000000000000000000000000000000000) {
-            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000000000)))/1000).toFixed(3))+"Dc anti-presses";
+            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000000000000)))%1000).toFixed(3))+"Dc anti-presses";
         } else if (antipresses>=1000000000000000000000000000000000000 && antipresses<1000000000000000000000000000000000000000) {
-            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000000000000)))/1000).toFixed(3))+"UDc anti-presses";
+            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000000000000000)))%1000).toFixed(3))+"UDc anti-presses";
         } else if (antipresses>=1000000000000000000000000000000000000000 && antipresses<1000000000000000000000000000000000000000000) {
-            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000000000000000)))/1000).toFixed(3))+"DDc anti-presses";
+            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000000000000000000)))%1000).toFixed(3))+"DDc anti-presses";
         } else if (antipresses>=1000000000000000000000000000000000000000000 && antipresses<1000000000000000000000000000000000000000000000) {
-            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000000000000000000)))/1000).toFixed(3))+"TDc anti-presses";
+            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000000000000000000000)))%1000).toFixed(3))+"TDc anti-presses";
         } else if (antipresses>=1000000000000000000000000000000000000000000000 && antipresses<1000000000000000000000000000000000000000000000000) {
-            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000000000000000000000)))/1000).toFixed(3))+"QaDc anti-presses";
+            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000000000000000000000000)))%1000).toFixed(3))+"QaDc anti-presses";
         } else if (antipresses>=1000000000000000000000000000000000000000000000000 && antipresses<1000000000000000000000000000000000000000000000000000) {
-            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000000000000000000000000)))/1000).toFixed(3))+"QiDc anti-presses";
+            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000000000000000000000000000)))%1000).toFixed(3))+"QiDc anti-presses";
         } else if (antipresses>=1000000000000000000000000000000000000000000000000000 && antipresses<1000000000000000000000000000000000000000000000000000000) {
-            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000000000000000000000000000)))/1000).toFixed(3))+"SxDc anti-presses";
+            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000000000000000000000000000000)))%1000).toFixed(3))+"SxDc anti-presses";
         } else if (antipresses>=1000000000000000000000000000000000000000000000000000000 && antipresses<1000000000000000000000000000000000000000000000000000000000) {
-            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000000000000000000000000000000)))/1000).toFixed(3))+"SpDc anti-presses";
+            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000000000000000000000000000000000)))%1000).toFixed(3))+"SpDc anti-presses";
         } else if (antipresses>=1000000000000000000000000000000000000000000000000000000000 && antipresses<1000000000000000000000000000000000000000000000000000000000000) {
-            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000000000000000000000000000000000)))/1000).toFixed(3))+"OcDc anti-presses";
+            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000000000000000000000000000000000000)))%1000).toFixed(3))+"OcDc anti-presses";
         } else if (antipresses>=1000000000000000000000000000000000000000000000000000000000000 && antipresses<1000000000000000000000000000000000000000000000000000000000000000) {
-            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000000000000000000000000000000000000)))/1000).toFixed(3))+"NoDc anti-presses";
+            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000000000000000000000000000000000000000)))%1000).toFixed(3))+"NoDc anti-presses";
         } else if (antipresses>=1000000000000000000000000000000000000000000000000000000000000000 && antipresses<1000000000000000000000000000000000000000000000000000000000000000000) {
-            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000000000000000000000000000000000000000)))/1000).toFixed(3))+"Vg anti-presses";
+            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000000000000000000000000000000000000000000000000000000000000)))%1000).toFixed(3))+"Vg anti-presses";
         } else if (antipresses>=1000000000000000000000000000000000000000000000000000000000000000000){
             document.getElementById("first").innerText="1UVg+ anti-presses";
         }
