--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -3466,7 +3466,7 @@ function checkAchievements(){
     accomplish(achtitle23, achdesc23)
     popups=1
     }
-    if (pps>=1000000000000000000000000000 && achcomp10=24){
+    if (pps>=1000000000000000000000000000 && achcomp24==0){
     achcomp24=1
     accomplish(achtitle24, achdesc24)
     popups=1
