--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -4180,15 +4180,15 @@ window.onfocus = function (ev) {
     if (challenge==2){
     pressesdec=0
     } else if (challenge==3 || challenge==4){
-    pressesdec+=((((((cursor*0.1)*0.01)+((mother*1)*0.01)+((goals1*(ppower))*0.01))*(goals2+1)*(Math.pow(2, goals6)))*(msawaycalc/100)/100)*ppsoffbonus)
-    ppsgainoff=((((((cursor*0.1)*0.01)+((mother*1)*0.01)+((goals1*(ppower))*0.01))*(goals2+1)*(Math.pow(2, goals6)))*(msawaycalc/100)/100)*ppsoffbonus)
+    pressesdec+=((((((((cursor*0.1)*0.01)+((mother*1)*0.01)+((goals1*(ppower))*0.01))*(goals2+1)*(Math.pow(2, goals6)))*((mxpmul/chargexp)*0.001))*chargepress)*(msawaycalc/100)/100)*ppsoffbonus)
+    ppsgainoff=((((((((cursor*0.1)*0.01)+((mother*1)*0.01)+((goals1*(ppower))*0.01))*(goals2+1)*(Math.pow(2, goals6)))*((mxpmul/chargexp)*0.001))*chargepress)*(msawaycalc/100)/100)*ppsoffbonus)
     } else {
-    pressesdec+=((((((((cursor*0.1)*0.01)*(cpower))+(((mother*1)*0.01)*(mpower)))+((goals1*(ppress*ppower))*0.01))*(goals2+1)*(Math.pow(2, goals6)))*(msawaycalc/100)/100)*ppsoffbonus)
-    ppsgainoff=((((((((cursor*0.1)*0.01)*(cpower))+(((mother*1)*0.01)*(mpower)))+((goals1*(ppress*ppower))*0.01))*(goals2+1)*(Math.pow(2, goals6)))*(msawaycalc/100)/100)*ppsoffbonus)
+    pressesdec+=((((((((((cursor*0.1)*0.01)*(cpower))+(((mother*1)*0.01)*(mpower)))+((goals1*(ppress*ppower))*0.01))*(goals2+1)*(Math.pow(2, goals6)))*((mxpmul/chargexp)*0.001))*chargepress)*(msawaycalc/100)/100)*ppsoffbonus)
+    ppsgainoff=((((((((((cursor*0.1)*0.01)*(cpower))+(((mother*1)*0.01)*(mpower)))+((goals1*(ppress*ppower))*0.01))*(goals2+1)*(Math.pow(2, goals6)))*((mxpmul/chargexp)*0.001))*chargepress)*(msawaycalc/100)/100)*ppsoffbonus)
     }
     } else if (dimension==1){
-    pressesdec+=((((((goals1*(antistrength))*0.01))*(goals2+1)*(Math.pow(2, goals6)))*(axpmul*0.001))*(msawaycalc/10))
-    ppsgainoff=((((((goals1*(antistrength))*0.01))*(goals2+1)*(Math.pow(2, goals6)))*(axpmul*0.001))*(msawaycalc/10))
+    pressesdec+=(((((((goals1*(antistrength))*0.01))*(goals2+1)*(Math.pow(2, goals6)))*((axpmul/chargexp)*0.001))*chargepress)*(msawaycalc/100))
+    ppsgainoff=(((((((goals1*(antistrength))*0.01))*(goals2+1)*(Math.pow(2, goals6)))*((axpmul/chargexp)*0.001))*chargepress)*(msawaycalc/100))
     }
     }
     if (detailedoutput==1){
